# lab-gpu-monitor

./: .env  .gitignore  README.md  pyproject.toml  run_dev.sh  run_prod.sh  stop_dev.sh  stop_prod.sh
backend/: main.py
backend/api/: __init__.py  admin.py  announcements.py  applications.py  auth.py  health.py  overview.py
backend/collectors/: gpu.py  node.py  slurm.py  ssh.py
backend/core/: config.py  logging.py
backend/db/: __init__.py  base.py  session.py
backend/db/models/: __init__.py  announcement.py  application.py  audit_log.py  user.py
backend/schemas/: announcement.py  application.py  auth.py  user.py
backend/security/: deps.py  jwt.py  password.py
backend/services/: announcement_service.py  application_service.py  audit_service.py  auth_service.py  cache.py  overview.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend-old/: index.html  styles.css
frontend-old/js/: api.js  app.js  query.js  render.js  state.js  utils.js
frontend/src/: App.vue  style.css
frontend/src/api/: announcements.js  applications.js  auth.js  client.js  overview.js
frontend/src/components/: GpuCard.vue  NodeCard.vue  NodeList.vue  SummaryCards.vue  ToolbarPanel.vue  UserTable.vue
frontend/src/composables/: useAuth.js  useOverview.js  useQueryState.js
frontend/src/pages/: AdminApplicationsPage.vue  AnnouncementsPage.vue  ApplyAccountPage.vue  LoginPage.vue  OverviewPage.vue
frontend/src/router/: index.js
frontend/src/utils/: format.js
logs/: backend_prod.pid
scripts/: init_admin.py  test_collect.py
